Ensure second line of message body is never visible in LeftPane

--- a/Signal/stylesheets/manifest.css
+++ b/Signal/stylesheets/manifest.css
@@ -4073,7 +4073,6 @@ img.emoji.jumbo {
   font-size: 13px;
   line-height: 18px;
   letter-spacing: -0.03px;
-  height: 1.4em;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
